Overflow was fixed

--- a/src/app/ui/blocks/register-content/register-content.component.scss
+++ b/src/app/ui/blocks/register-content/register-content.component.scss
@@ -1,4 +1,4 @@
-@use '../../_styles/index.scss' as styles;
+@use "../../_styles/index.scss" as styles;
 
 .register-content {
   position: relative;
@@ -17,6 +17,13 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
+  }
+}
+
+@media (min-width: styles.$bkp-tablet) {
+  .register-content {
+    &__form {
+      height: 100vh;
+    }
   }
 }
